# pyinterfaces

./: .gitignore  README.md  main.py  pyproject.toml  teste_local.py
pyinterfaces/: __init__.py  cli.py  compilador.py
tests/: test_compilador.py
